--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
         <title>Rock Paper Scissors</title>
     </head>
     <body>
-        <script>
-            
-        </script>
+        <script src="main.js"></script>
     </body>
 </html>
